--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "date-fns": "^2.29.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "6"
   },
   "devDependencies": {
